# cantrilbat

./: .gitignore  AUTHORS  CMAKE_INSTALL  CMakeLists.txt  HISTORY_TESTING.txt  INSTALL  LICENSE.txt  Makefile.in  README  README.MAC.txt  ZTrhel6_64_sierra_gcc493_current  Zrhel6_64_sierra_gcc472_current  Zrhel6_64_sierra_gcc493_current  Zrhel6_64_sierra_gcc493_opt  Zrhel6_64_sierra_gcc720_bat  Zrhel6_64_sierra_gcc720_current  Zrhel7_64_nompi  Zrhel7_64_sierra_gcc1020_mpi405_HKM  Zrhel7_64_sierra_gcc720_HKM  Zrhel7_64_sierra_gcc720_mpi403_HKM  Zrhel7_64_sierra_gcc720_mpi405  Zrhel7_64_sierra_gcc720_mpi405_HKM  Zrhel7_64_sierra_gcc720_mpi405_opt  Zrhel7_64_sierra_gcc720_nompi_dbg  Zrhel7_64_sierra_gcc720_nompi_opt  config.h.in  configCantrilbat.h.in  configure.cygwin  configure.in  copywrite.txt  preconfig  rhel5_64_sierra_gcc446  rhel6_64_gcc472_anode  rhel6_64_sierra_gcc472  rhel6_64_sierra_gcc472_absIons  rhel6_64_sierra_gcc472_anode  rhel6_64_sierra_gcc472_current  rhel6_64_sierra_gcc472_nompi  rhel6_64_sierra_gcc472_opt
1Delectrode/: .gitignore  CMakeLists.txt  Makefile.in  README  TecplotNotes.txt  anode_sub.sh
1Delectrode/attic/: m1d_nox_interface.cpp  m1d_nox_interface.h  m1d_nox_problem.h
1Delectrode/docs/: notes_hkm.txt
1Delectrode/src/: .gitignore  BEulerInt.cpp  BEulerInt.h  CMakeLists.txt  Makefile.in  Multi1DDomain.cpp  Multi1DDomain.h  Multi1DDomain.inp  Nomenclature.txt  TODO.txt  m1d_BEulerInt.cpp  m1d_BEulerInt.h  m1d_BoundaryCondition.cpp  m1d_BoundaryCondition.h  m1d_BulkDomain1D.cpp  m1d_BulkDomain1D.h  m1d_BulkDomainDescription.cpp  m1d_BulkDomainDescription.h  m1d_BulkDomainTypes.cpp  m1d_BulkDomainTypes.h  m1d_Comm.cpp  m1d_Comm.h  m1d_Domain1D.cpp  m1d_Domain1D.h  m1d_DomainDescription.cpp  m1d_DomainDescription.h  m1d_DomainLayout.cpp  m1d_DomainLayout.h  m1d_EpetraExtras.cpp  m1d_EpetraExtras.h  m1d_EpetraJac.cpp  m1d_EpetraJac.h  m1d_EqnVarTypes.cpp  m1d_EqnVarTypes.h  m1d_Eqn_Names.h  m1d_GlobalIndices.cpp  m1d_GlobalIndices.h  m1d_LocalNodeIndices.cpp  m1d_LocalNodeIndices.h  m1d_NodalVars.cpp  (+52 more)
1Delectrode/src_CanteraElectrode/: .gitignore  BEulerInt_Battery.cpp  BEulerInt_Battery.h  CMakeLists.txt  FuncElectrodeCurrent.cpp  FuncElectrodeCurrent.h  Makefile.in  m1d_BC_Battery.cpp  m1d_BC_Battery.h  m1d_BDD_porousElectrode.cpp  m1d_BDD_porousElectrode.h  m1d_BDD_porousFlow.cpp  m1d_BDD_porousFlow.h  m1d_BDD_porousLiKCl.cpp  m1d_BDD_porousLiKCl.h  m1d_BDT_porousLiKCl.cpp  m1d_BDT_porousLiKCl.h  m1d_BatteryResidEval.cpp  m1d_BatteryResidEval.h  m1d_CanteraElectrodeGlobals.h  m1d_ProblemStatementCell.cpp  m1d_ProblemStatementCell.h  m1d_ProblemStatementCell.inp  m1d_SDD_AnodeCollector.cpp  m1d_SDD_AnodeCollector.h  m1d_SDD_CathodeCollector.cpp  m1d_SDD_CathodeCollector.h  m1d_SDD_ElectrodeSepInterface.cpp  m1d_SDD_ElectrodeSepInterface.h  m1d_SDT_AnodeCollector.cpp  m1d_SDT_AnodeCollector.h  m1d_SDT_CathodeCollector.cpp  m1d_SDT_CathodeCollector.h  m1d_SDT_ElectrodeSepInterface.cpp  m1d_SDT_ElectrodeSepInterface.h  m1d_SolNonlinear_CurrentSolve.cpp  m1d_SolNonlinear_CurrentSolve.h  m1d_SurDomain_AnodeCollector.cpp  m1d_SurDomain_AnodeCollector.h  m1d_SurDomain_CathodeCollector.cpp  (+15 more)
1Delectrode/src_Cu2S/: .cproject  .cvsignore  .project  CMakeLists.txt  Cu2S_growth.cpp  Cu2S_growth.h  Cu2S_growth.inp  Cu2S_models.cpp  Cu2S_models.h  Makefile.in  ReactionRate.cpp  ReactionRate.h  m1d_BDD_Cu2S.cpp  m1d_BDD_Cu2S.h  m1d_BDT_Cu2S.cpp  m1d_BDT_Cu2S.h  m1d_DomainLayout_Cu2S.cpp  m1d_DomainLayout_Cu2S.h  m1d_ReactingSurDomain.cpp  m1d_ReactingSurDomain.h  m1d_SDD_Mixed_Cu2S.cpp  m1d_SDD_Mixed_Cu2S.h  m1d_SDT_Mixed_Cu2S.cpp  m1d_SDT_Mixed_Cu2S.h  m1d_SurDomain_Cu2S.cpp  m1d_SurDomain_Cu2S.h  m1d_TDGrowingFilm_dom1D.cpp  m1d_TDGrowingFilm_dom1D.h  trun2tv
1Delectrode/src_LiIon_PorousBat/: .gitignore  CMakeLists.txt  LiIon_PorousBat.cpp  LiIon_PorousBat.h  LiIon_PorousBat.inp  Makefile.in  anode.inp  cathode.inp  m1d_BDD_porAnode_LiIon.cpp  m1d_BDD_porAnode_LiIon.h  m1d_BDD_porCathode_LiIon.cpp  m1d_BDD_porCathode_LiIon.h  m1d_BDD_porSeparator_LiIon.cpp  m1d_BDD_porSeparator_LiIon.h  m1d_BDT_porAnode_LiIon.cpp  m1d_BDT_porAnode_LiIon.h  m1d_BDT_porCathode_LiIon.cpp  m1d_BDT_porCathode_LiIon.h  m1d_BDT_porSeparator_LiIon.cpp  m1d_BDT_porSeparator_LiIon.h  m1d_DomainLayout_LiIon_PorousBat.cpp  m1d_DomainLayout_LiIon_PorousBat.h  m1d_porousLiIon_Anode_dom1D.cpp  m1d_porousLiIon_Anode_dom1D.h  m1d_porousLiIon_Cathode_dom1D.cpp  m1d_porousLiIon_Cathode_dom1D.h  m1d_porousLiIon_Separator_dom1D.cpp  m1d_porousLiIon_Separator_dom1D.h  separator.inp
1Delectrode/src_LiKCl_PorousBat/: .gitignore  CMakeLists.txt  Fe1_xS.xml  FeS2.xml  FeS2_1_electrode.xml  FeS2_2_electrode.xml  FeS2_3_electrode.xml  FeS2_electrode.xml  Fe_Solid.xml  Li12Si7.xml  Li13Si4.xml  Li2S.xml  Li2_xFe1_xS2.xml  Li3Fe2S4.xml  Li7Si3.xml  LiKCl_Margules_trans.xml  LiKCl_PorousBat.cpp  LiKCl_PorousBat.h  LiKCl_PorousBat.inp  LiSi_1_electrode.xml  LiSi_2_electrode.xml  LiSi_3_electrode.xml  LiSi_electrode.xml  Li_Liquid.xml  Makefile.in  Si_Solid.xml  anode.inp  cathode.inp  m1d_BDT_porAnode_LiKCl.cpp  m1d_BDT_porAnode_LiKCl.h  m1d_BDT_porCathode_LiKCl.cpp  m1d_BDT_porCathode_LiKCl.h  m1d_DomainLayout_LiKCl_PorousBat.cpp  m1d_DomainLayout_LiKCl_PorousBat.h  m1d_porousLiKCl_FeS2Cathode_dom1D.cpp  m1d_porousLiKCl_FeS2Cathode_dom1D.h  m1d_porousLiKCl_LiSiAnode_dom1D.cpp  m1d_porousLiKCl_LiSiAnode_dom1D.h  run2  run_tv  (+3 more)
1Delectrode/src_LiKCl_infPlateBat/: .cproject  .cvsignore  .project  CMakeLists.txt  FeS2_electrode.xml  LiKCl_Margules_trans.xml  LiKCl_infPlateBat.cpp  LiKCl_infPlateBat.inp  LiKCl_recipmoltenSalt_trans.xml  LiSi_electrode.xml  Makefile.in  anode.inp  cathode.inp  cell.inp  m1d_BDD_porousLiKCl.cpp  m1d_BDD_porousLiKCl.h  m1d_BDT_porousLiKCl.cpp  m1d_BDT_porousLiKCl.h  m1d_DomainLayout_LiKCl_infPlateBat.cpp  m1d_DomainLayout_LiKCl_infPlateBat.h  m1d_FlatBatteryResidEval.cpp  m1d_FlatBatteryResidEval.h  m1d_PS_InfPlateBat.cpp  m1d_PS_InfPlateBat.h  m1d_SDD_FlatAnode.cpp  m1d_SDD_FlatAnode.h  m1d_SDD_FlatCathode.cpp  m1d_SDD_FlatCathode.h  m1d_SDT_FlatAnode.cpp  m1d_SDT_FlatAnode.h  (+11 more)
(+2244 files in other folders)
