dnl Process this file with autoconf to produce the file configure
# Autoconf requirements

AC_INIT(cantrilbat, v.1.2_devel)
AC_CONFIG_AUX_DIR(.)


ac_sys_system=`uname -s`
ac_sys_release=`uname -r`
ac_sys_hardware=`uname -i`

##### Information on the package
#
# -----------------------------------------------------------------------------
#        Configure Options
# -----------------------------------------------------------------------------
#
OS_IS_WIN=0
OS_IS_CYGWIN=0
OS_IS_SOLARIS=0
case $ac_sys_system in
  Darwin*)  OS_IS_DARWIN=1; mex_ext=mexmac;;
  CYGWIN*) OS_IS_CYGWIN=1; OS_IS_WIN=1; mex_ext=dll;;
  SunOS*)  OS_IS_SOLARIS=1;;
esac

##### check for programs

#### check for libraries


#### check for header files



##### check for types

#### check for structures
#
# -----------------------------------------------------------------------------
#        Configuring the ct_prefix and ct_local_inst variable
# -----------------------------------------------------------------------------
#
ct_prefix=${CANTERA_INSTALL_DIR}
#
ct_prdef="/usr/local/cantera"
if test "x$OS_IS_DARWIN" = "x1"; then ct_prdef="/Applications/Cantera"; fi
#
ct_local_inst=1
AC_SUBST(ct_local_inst)
#
# -----------------------------------------------------------------------------
#        Configuring the prefix variable
# -----------------------------------------------------------------------------
#
prefix=${CANTERA_APPS_INSTALL_DIR}

cta_prefix=${CANTERA_APPS_INSTALL_DIR}
echo 'cta_prefix = ' $cta_prefix

#
# ----------------------------------------------------------------------------
#  Make sure the ct_prefix directory and underlying directories exist
# ----------------------------------------------------------------------------
#
if test ! -d ${cta_prefix}
then
 echo Instaling ${cta_prefix}
 install -d ${cta_prefix}
fi

if test ! -d ${cta_prefix}/bin
then
 echo Instaling ${cta_prefix}/bin
 install -d ${cta_prefix}/bin
fi

if test ! -d ${cta_prefix}/lib
then
 echo Instaling ${cta_prefix}/lib
 install -d ${cta_prefix}/lib
fi

if test ! -d ${cta_prefix}/include
then
 echo Instaling ${cta_prefix}/include
 install -d ${cta_prefix}/include
fi
#
# ----------------------------------------------------------------------------
#       Go Get the Cantera Version String
# ----------------------------------------------------------------------------
#
CANTERA_INC=${CANTERA_INSTALL_DIR}/include/cantera
CANTERA_MAK=${CANTERA_INC}/Cantera.mak
CANTERA_VERSION_SED=`sed -n  '/^CANTERA_VERSION/  s/CANTERA_VERSION=// p' ${CANTERA_MAK}`
echo 'Cantera Version Number Read from Cantera.mak = "'${CANTERA_VERSION_SED}"\""
if test ${CANTERA_VERSION} = "default"
then
  CANTERA_VERSION=${CANTERA_VERSION_SED}
else
  echo 'Cantera Version to be used is Overwritten. Will use the Version ' $CANTERA_VERSION
fi
# echo 'CANTERA_VERSION = ' $CANTERA_VERSION
#
# -----------------------------------------------------------------------------
#                    PURIFY
# -----------------------------------------------------------------------------
#
AC_SUBST(PURIFY)
if test "x$PURIFY" != "x"; then
  AC_DEFINE(PURIFY_MODE)
fi
#
# -----------------------------------------------------------------------------
#                  Configure MPI
# -----------------------------------------------------------------------------
#
# Determine the default names for the MPI compilers from the MPIHOME variable,
# unless overwritten.
if test "x${MPICXX}" = "x"; then
  MPICXX=${MPIHOME}/bin/mpiCC
fi
if test "x${MPICC}" = "x"; then
  MPICC=${MPIHOME}/bin/mpicc
fi
if test "x${MPIF77}" = "x"; then
  MPIF77=${MPIHOME}/bin/mpif77
fi
#
# If we use MPI, we must replace the compilers in some cases
#
MPI_REPLACE_ALL_COMPILERS=${MPI_REPLACE_ALL_COMPILERS:='n'}
if test $MPI_REPLACE_ALL_COMPILERS = 'y'; then
  echo 'testing whether to replace all compilers with the MPI compilers ... yes'
else
  echo 'testing whether to replace all compilers with the MPI compilers ... no'
fi
if test $MPI_REPLACE_ALL_COMPILERS = 'y'
then
  if test "x${DO_MPI}" = "xy"
  then
    CXX=${MPICXX}
    CC=${MPICC}
    F77=${MPIF77}
  fi
fi

if test "x${DO_MPI}" = "xy"
then
  echo 'testing whether to turn on the HAVE_MPI flag which triggers compilation with MPI ... yes'
  AC_DEFINE(HAVE_MPI)
  AC_SUBST(MPIHOME)
  mpi_include_dir=${MPIHOME}/include
  AC_SUBST(mpi_include_dir)
else
  echo 'testing whether to turn off the HAVE_MPI flag which triggers compilation with MPI ... no'
  MPICXX=${CXX}
  MPICC=${CC}
  MPIF77=${F77} 
  MPIHOME='.'
  AC_SUBST(MPIHOME)
  mpi_include_dir=.
  AC_SUBST(mpi_include_dir)
fi
#
#  Setup a default machine file that is used in the MP environment if no other machine file is specified
#
hhhs=`hostname -s`
hhh=`hostname`
hname="doc/machinefile_"${hhhs}
cat >${hname} <<+
$hhh
$hhh
$hhh
$hhh
$hhh
$hhh
$hhh
$hhh
+
fhname=`pwd`"/"${hname}

if test "x${MP_MACHINEFILE_DEFAULT}" = "x"
then
  MP_MACHINEFILE_DEFAULT=$fhname
fi
AC_SUBST(MP_MACHINEFILE_DEFAULT)


#
# ------------------------------------------------------------------------------------
#                    Figure out if Cantera's debug mode is turned on
# ------------------------------------------------------------------------------------
#
# Create a signal for the Makefile environment and the compilation environment.
#
#   Right now we use a grep statement for a string. It works, though it probably
#   isn't the most stable method.
#
CANTERA_config_FILE=${ct_prefix}/include/cantera/base/config.h
# echo "CANTERA_config_FILE = " $CANTERA_config_FILE
CA_CANTERA_DEBUG_MODE=0  
if test -f $CANTERA_config_FILE
then
  grep "#define DEBUG_MODE 1" $CANTERA_config_FILE
  res=$?
  if test $res == 0
  then
    CA_CANTERA_DEBUG_MODE=1  
    echo "Determined that Cantera has its DEBUG_MODE turned on "
  else
   echo "Determined that Cantera has its DEBUG_MODE turned off "
  fi
fi

#  Create a Makefile substitution parameter that has a value of 1 if Cantera's
#  debug rule is passed. The rule is called CA_CANTERA_DEBUG_MODE
AC_SUBST(CA_CANTERA_DEBUG_MODE)

#  Create a Cantera_Apps configCantrilbat.h define statement, named CANTERA_DEBUG_MODE,
#  that has a value of 1 if Cantera's debug mode is turned on.
AC_DEFINE_UNQUOTED(CANTERA_DEBUG_MODE, $CA_CANTERA_DEBUG_MODE)

#
# -----------------------------------------------------------------------------
#        Configuring the install command
# -----------------------------------------------------------------------------

case $ac_sys_system in
  CYGWIN* )
     INSTALL=${INSTALL_BIN:=config/install-sh}
     echo 'INSTALL program has been set to ' $INSTALL;;
esac

#
# -----------------------------------------------------------------------------
#        Configuring the compilers
# -----------------------------------------------------------------------------
#
# Check a few things about the C++ compiler.
#  Then, set up a substitution rule for the names @CXX@ and @CXXFLAGS@
#
AC_PROG_CXX()
#
# Check a few things. Then, set up a substitution rule for the names
# @CC@ and @CFLAGS@
#
AC_PROG_CC()

have_posix=0
AC_CHECK_HEADERS([unistd.h], have_posix=1, have_posix=0)
AC_SUBST(have_posix)


if test  "x$CXX_GDEFINES" = "x"; then
  CXX_GDEFINES=""
fi
AC_SUBST(CXX_GDEFINES)

#
# Loader flags for the C++ linking operation
#
if test -z "$LCXX_FLAGS"; then 
  LCXX_FLAGS="$CXXFLAGS"
fi
AC_SUBST(LCXX_FLAGS)
#
# Ending libraries to tack onto the linking of all C++ programs
#
if test -z "$LCXX_END_LIBS"; then
   LCXX_END_LIBS=' -lrt'
fi
if test -z "$LMPICXX_END_LIBS"; then
   LMPICXX_END_LIBS=$LCXX_END_LIBS
fi

if test -n "$NEED_CTF2C" ; then
 LCXX_END_LIBS=$LCXX_END_LIBS' -lctf2c'
fi
if test -n "$NEED_CTF2C" ; then
 LMPICXX_END_LIBS=$LMPICXX_END_LIBS' -lctf2c'
fi

#
# Check to see if we have a -lm line
#
AC_CHECK_LIB(m, printf, [add_stm=1], [add_stm=0], [ ])

#
# Check to see if we have a -lstdc++ line
#
AC_CHECK_LIB(stdc++, printf, [add_stdc=1], [add_stdc=0], [])

if test $add_stm = 1 ; then
  echo 'Adding -lm to the end of the LCXX_END_LIBS variable'
  LCXX_END_LIBS="$LCXX_END_LIBS"" -lm"
  LMPICXX_END_LIBS="$LMPICXX_END_LIBS"" -lm"
  echo 'LCXX_END_LIBS = ' $LCXX_END_LIBS
  echo 'LMPICXX_END_LIBS = ' $LMPICXX_END_LIBS
fi
if test $add_stdc = 1 ; then
  echo 'Adding -lstdc++ to the end of the LCXX_END_LIBS variable'
  LCXX_END_LIBS="$LCXX_END_LIBS"" -lstdc++ "
  LMPICXX_END_LIBS="$LMPICXX_END_LIBS"" -lstdc++ "
  echo 'LCXX_END_LIBS = ' $LCXX_END_LIBS
  echo 'LMPICXX_END_LIBS = ' $LMPICXX_END_LIBS
fi


AC_SUBST(LCXX_END_LIBS)
AC_SUBST(LMPICXX_END_LIBS)

#----------- DEPENDS --------------------
#
# compilation of depends rules
#
if test "x${CXX_DEPENDS}" = "x"  -o "${CXX_DEPENDS}" = "${CXX_DEPENDS_DFT}"; then
  if test "x${DO_MPI}" = "xy"; then
    CXX_DEPENDS="${MPICXX} -MM"
  else
    CXX_DEPENDS="${CXX}  -MM"
  fi
fi
echo 'Setting the CXX_DEPENDS variable to = ' $CXX_DEPENDS
AC_SUBST(CXX_DEPENDS)

AC_SUBST(MPICXX)
AC_SUBST(MPICC)

#
# ----------------------------------------------------------------------------
#        Configuring the fortran compiler and fortran programs in C++ programs
# -----------------------------------------------------------------------------
#
# This macro sets the substitution variable, @F77@ and @G77@
#

AC_PROG_F77()

#
# if G77 is defined (this is determined immediately above),
# then add a flag to turn off adding a second underscore
# to procedures that have an underscore in the name
if test -n "$G77"; then
  FFLAGS=$FFLAGS' -fno-second-underscore'
fi
#
# Configuring what needs to be added to the linker in order that fortran
# object files or libraries can be successfully linked in with C++ programs
# -> The key here is the fortran IO. 
#    The macro below sets up the Makefile substitution variable @FLIBS@
#    For the current mac os, the results of this macro are overwritten.
F77LDRCLIBS=
AC_F77_LIBRARY_LDFLAGS()

echo " Macro returned with FLIBS defined as " $FLIBS

case $ac_sys_system in
  Darwin*)  FLIBS='-lctf2c -lgfortran' ; F77LDRCLIBS='-lctf2c -lgfortran' ;;
  Linux*)   F77LDRCLIBS=' -lgcc -lstdc++ -lm' ;;
esac
AC_SUBST(F77LDRCLIBS)
#
AC_PROG_FC()
#
AC_FC_LIBRARY_LDFLAGS()

#
#  Add a configure variable for fortran to add ftnString length variables
#  at the end
#
if test ! -z $LAPACK_FTN_STRING_LEN_AT_END
then
AC_DEFINE(LAPACK_FTN_STRING_LEN_AT_END)
fi

#
#  Add a configure variable for fortran to add  underscores 
#  at the end of names
#
if test ! -z $LAPACK_FTN_TRAILING_UNDERSCORE
then
AC_DEFINE(LAPACK_FTN_TRAILING_UNDERSCORE)
fi


#
# -----------------------------------------------------------------------------
#        Configure Python build process
# -----------------------------------------------------------------------------
#     Python Interface
#
if test "$BUILD_PYTHON_INTERFACE" = "y"; then
  BUILD_PYTHON=1
else
  BUILD_PYTHON=0
fi
#
#     Python command invokation
#
if test -z "$PYTHON_CMD"; then
  AC_PATH_PROGS([PYTHON_CMD],[python2 python], "none")
fi
if test "$PYTHON_CMD" != "none"; then
  #if test "x$OS_IS_WIN" = "x1"; then
  #  PYTHON_CMD=`cygpath -a -w "$PYTHON_CMD" | sed 's/\\\/\\//g'`
  #fi
  BUILD_PYTHON=0
else
  BUILD_PYTHON=0
fi

#
# Determination of Python site-package directory location
#
local_python_inst=0
python_prefix=$prefix
if test "x${SET_PYTHON_SITE_PACKAGE_TOPDIR}" = "xy"; then
   python_prefix=${PYTHON_SITE_PACKAGE_TOPDIR}
   local_python_inst=1
fi
if test $BUILD_PYTHON == "1"; then
  echo "Python packages will be installed in ${python_prefix}"
else 
  echo "Python Interface will not be installed"
fi
#
#  Add a makefile substitution rule for the variable @local_python_inst@
#
AC_SUBST(local_python_inst)
#
#  Add a makefile substitution rule for the variable @python_prefix@
#
AC_SUBST(python_prefix)
#
#  Add a makefile substitution rule for the variable @BUILD_PYTHON@
#
AC_SUBST(BUILD_PYTHON)
#

##### check for library functions


######  check for system services

dnl Checks for programs.
#
#  This script will find and set the $INSTALL 
#  environmental variable, and set a substitution
#  rule for that variable
AC_PROG_INSTALL

# -----------------------------------------------------------------------------
#       Configure configCantrilbat.h
# -----------------------------------------------------------------------------
#  This is the default macro to add a configCantrilbat.h capability to autoconf
# 
AC_CONFIG_HEADER(configCantrilbat.h)
#
# Check for the existence of system functions
#
AC_CHECK_FUNCS([memset])
#
# The AC_DEFINE_UNQUOTED macro creates a capability to substitute defines
# in configCantrilbat.h files. 
#   -> You just have to add the line #undef MACRO_NAME to the configCantrilbat.h.in file.
#      Or, the command autoheader does this for you.
# 
#
# Add a define for the CANTERA_ROOT preprocessor variable
#
AC_DEFINE_UNQUOTED(CANTERA_ROOT, "$CANTERA_ROOT", Root location of the \
    Cantera Source Code directory)
#
# Add in a Makefile substitution rule in for the macro @ctb_root@
#
ctb_root=$CANTERA_ROOT
AC_SUBST(ctb_root)

AC_DEFINE_UNQUOTED(INCL_PURE_FLUIDS_IN_APPS, $INCPUREFLUIDS, Include pure fluids)
#
#
DO_REMOVE_UNREACHABLE=0
case $ac_sys_system in
  SunOS*) DO_REMOVE_UNREACHABLE=1;; 
esac
if test "$DO_REMOVE_UNREACHABLE" = "1"
then
  AC_DEFINE_UNQUOTED(REMOVE_UNREACHABLE, 1, Define for removing some statements)
fi
#
os_solaris=0
if test "x${OS_IS_SOLARIS}" = "x1"; then
  AC_DEFINE_UNQUOTED(SOLARIS,$OS_IS_SOLARIS)
  os_solaris=1
fi
AC_SUBST(os_solaris)




#
# -----------------------------------------------------------------------------
#         MAKEFILE SUBSTITUTION VARIABLES
# 
#              These may occur in subsections as well
# -----------------------------------------------------------------------------
target=`./config.guess`
echo 'target is guessed at ' $target
builddir=$target
if test "x${OS_IS_WIN}" = "x1"; then
  builddir="i686-pc-cygwin"
fi
ctb_buildlib=$ctb_root/build/lib/$builddir
export ctb_buildlib
#
# Add in a Makefile substitution rule for the macro @ctb_buildlib@
#
AC_SUBST(ctb_buildlib)
#
# Note: prefix is defined as the base directory
#       in Cantera's install path.
AC_SUBST(prefix)

ctversion=${CANTERA_VERSION}
AC_SUBST(ctversion)
#
# Modifications to distributed installs if this is a
# compact install!
#
ct_libdir=${ct_prefix}/lib
ct_incroot=${ct_prefix}/include
ct_bindir=${ct_prefix}/bin
ct_datadir=${ct_prefix}/data
cta_incdir=${cta_prefix}/include
cta_libdir=${cta_prefix}/lib
cta_bindir=${cta_prefix}/bin

AC_SUBST(ct_libdir)
AC_SUBST(ct_incroot)
AC_SUBST(ct_bindir)
AC_SUBST(ct_datadir)
AC_SUBST(cta_prefix)
AC_SUBST(cta_incdir)
AC_SUBST(cta_libdir)
AC_SUBST(cta_bindir)
AC_SUBST(ct_prefix)

install -d ${cta_incdir}
install -d ${cta_libdir}
install -d ${cta_bindir}

# Cads root
#
cads_root=${CADS_ROOT}
AC_SUBST(cads_root)
#
#     @MAKE@ Substitution -> 
# 
#            Check to see if the environmental variable "MAKE" is set.
#            If it is, set the substitution rule for @MAKE@ to the value
#            of the environmental variable "MAKE". If there is no environmental
#            variable named MAKE, default to the substitution value of "MAKE". 
#
if test -z "$MAKE"; then MAKE='make'; fi
AC_SUBST(MAKE)

#
# Stubout section for f2c versions of lapack:
#    Define these variables, but turn them off in main version of code
#
build_with_f2c=0
if test -n $BUILD_WITH_F2C ; then
  if test $BUILD_WITH_F2C = "y" -o $BUILD_WITH_F2C = "Y" ; then
    build_with_f2c=1
  elif test $BUILD_WITH_F2C = "n" -o $BUILD_WITH_F2C = "N" ; then
    build_with_f2c=0
  elif test $BUILD_WITH_F2C = "default" ; then
    if test x$OS_IS_WIN = "x1" ; then
       build_with_f2c=1
    else
       build_with_f2c=0
    fi
  fi
fi
#
# Determine if you need the f2c library at link time
# -> Note, Linux systems already have the g2c library
#          added in, which is the same thing as our
#          f2c library.
NEED_CTF2C=
if test x"$build_with_f2c" = "x1" ; then
  NEED_CTF2C=1
  case $ac_sys_system in
    Linux)    NEED_CTF2C= ;;
    Darwin*)  NEED_CTF2C= ;;
  esac
fi
echo 'setting the Makefile variable build_with_f2c to '$build_with_f2c
AC_SUBST(build_with_f2c)


##### ac config files section

#
# Extention for executables. EXE_EXT comes in from the preconfig file. If it
# is set, then go with it. However, if not, $EXEEXT comes in from the 
# autoconf stuff, so go with that. The result is put into the variable
# $EXE_EXT for inclusion in Makefiles.
#
if test -z "$EXE_EXT"
then
  EXE_EXT=$EXEEXT
fi
AC_SUBST(EXE_EXT)

#
# -----------------------------------------------------------------------------
#   TRILINOS -        BLAS LIBRARIES
#
# -----------------------------------------------------------------------------
#
if test ! -z $BLAS_LIBRARY ; then
    blas_library=${BLAS_LIBRARY}
else
   if test ! -z "$BLAS_LIBRARY_NAMES" ; then
      oldddIFS=$IFS
      IFS=:
      aaa=`echo $BLAS_LIBRARY_NAMES`
      IFS=$oldddIFS
      for i in $aaa ;
      do
        # echo 'i = ' $i
        bbb=`echo $i | sed s/^lib// | sed s/\.a$//`
        # echo $bbb
        BLAS_LIBRARY="$BLAS_LIBRARY"" -l"$bbb
      done
      # echo BLAS_LIBRARY $BLAS_LIBRARY
   else
      BLAS_LIBRARY="-lblas"
   fi
fi

blas_library=${BLAS_LIBRARY}
AC_SUBST(blas_library)

blas_library_dir=${BLAS_LIBRARY_DIR}
AC_SUBST(blas_library_dir)

echo 'using blas location "'$blas_library_dir'" and library string "'$blas_library'"'

#
if test ! -z $LAPACK_LIBRARY ; then
    lapack_library=${LAPACK_LIBRARY}
else
   if test ! -z "$LAPACK_LIBRARY_NAMES" ; then
      oldddIFS=$IFS
      IFS=:
      aaa=`echo $LAPACK_LIBRARY_NAMES`
      IFS=$oldddIFS
      for i in $aaa ;
      do
        bbb=`echo $i | sed s/^lib// | sed s/\.a$//`
        LAPACK_LIBRARY="$LAPACK_LIBRARY"" -l"$bbb
      done
   else
      LAPACK_LIBRARY="-llapack"
   fi
fi

lapack_library=${LAPACK_LIBRARY}
AC_SUBST(lapack_library)

lapack_library_dir=${LAPACK_LIBRARY_DIR}
AC_SUBST(lapack_library_dir)





echo 'using lapack location "'$lapack_library_dir'" and library string "'$lapack_library'"'
#
# UMFPACK
#
if test ! -z $UMFPACK_LIBRARY ; then
    umfpack_library=${UMFPACK_LIBRARY}
else
   if test ! -z "$UMFPACK_LIBRARY_NAMES" ; then
      oldddIFS=$IFS
      IFS=:
      aaa=`echo $UMFPACK_LIBRARY_NAMES`
      IFS=$oldddIFS
      for i in $aaa ;
      do
        bbb=`echo $i | sed s/^lib// | sed s/\.a$//`
        UMFPACK_LIBRARY="$UMFPACK_LIBRARY"" -l"$bbb
      done
   else
      UMFPACK_LIBRARY="-lumfpack"
   fi
fi

umfpack_library=${UMFPACK_LIBRARY}
AC_SUBST(umfpack_library)

umfpack_library_dir=${UMFPACK_LIBRARY_DIR}
AC_SUBST(umfpack_library_dir)

echo 'using umfpack location "'$umfpack_library_dir'" and library string "'$umfpack_library'"'
#
# SUPERLUDIST
#
if test ! -z $SUPERLUDIST_LIBRARY ; then
    superludist_library=${SUPERLUDIST_LIBRARY}
else
   if test ! -z "$SUPERLUDIST_LIBRARY_NAMES" ; then
      oldddIFS=$IFS
      IFS=:
      aaa=`echo $SUPERLUDIST_LIBRARY_NAMES`
      IFS=$oldddIFS
      for i in $aaa ;
      do
        bbb=`echo $i | sed s/^lib// | sed s/\.a$//`
        SUPERLUDIST_LIBRARY="$SUPERLUDIST_LIBRARY"" -l"$bbb
      done
   else
      SUPERLUDIST_LIBRARY="-lsuperludist"
   fi
fi

superludist_library=${SUPERLUDIST_LIBRARY}
AC_SUBST(superludist_library)

superludist_library_dir=${SUPERLUDIST_LIBRARY_DIR}
AC_SUBST(superludist_library_dir)

echo 'using superludist location "'$superludist_library_dir'" and library string "'$superludist_library'"'

#
#Parmetis
#
if test ! -z $PARMETIS_LIBRARY ; then
    parmetis_library=${PARMETIS_LIBRARY}
else
   if test ! -z "$PARMETIS_LIBRARY_NAMES" ; then
      oldddIFS=$IFS
      IFS=:
      aaa=`echo $PARMETIS_LIBRARY_NAMES`
      IFS=$oldddIFS
      for i in $aaa ;
      do
        bbb=`echo $i | sed s/^lib// | sed s/\.a$//`
        PARMETIS_LIBRARY="$PARMETIS_LIBRARY"" -l"$bbb
      done
   else
      PARMETIS_LIBRARY="-lparmetis"
   fi
fi

parmetis_library=${PARMETIS_LIBRARY}
AC_SUBST(parmetis_library)

parmetis_library_dir=${PARMETIS_LIBRARY_DIR}
AC_SUBST(parmetis_library_dir)

echo 'using parmetis location "'$parmetis_library_dir'" and library string "'$parmetis_library'"'

#
#  Y12M
#
if test ! -z $Y12M_LIBRARY ; then
    y12m_library=${Y12M_LIBRARY}
else
   if test ! -z "$Y12M_LIBRARY_NAMES" ; then
      oldddIFS=$IFS
      IFS=:
      aaa=`echo $Y12M_LIBRARY_NAMES`
      IFS=$oldddIFS
      for i in $aaa ;
      do
        bbb=`echo $i | sed s/^lib// | sed s/\.a$//`
        Y12M_LIBRARY="$Y12M_LIBRARY"" -l"$bbb
      done
   else
      Y12M_LIBRARY="-ly12m"
   fi
fi

y12m_library=${Y12M_LIBRARY}
AC_SUBST(y12m_library)

y12m_library_dir=${Y12M_LIBRARY_DIR}
AC_SUBST(y12m_library_dir)

echo 'using y12m location "'$y12m_library_dir'" and library string "'$y12m_library'"'







#
# Trilinos install root
#
trilinos_root=${TRILINOS_INSTALL_DIR}
AC_SUBST(trilinos_root)




####### ac output SECTION


#
# -----------------------------------------------------------------------------
#             FILE CREATION PHASE
# 
# -----------------------------------------------------------------------------

dnl Note this seems to produce spurious checks against ../../../src for 
dnl      some reason. I have yet to find out why.
dnl

AC_OUTPUT(Makefile \
          batteryDevelop/Makefile \
          batteryDevelop/MCMBAnode/Makefile \
          batteryDevelop/MCMBAnode/MCMB_Mao/Makefile \
          batteryDevelop/LiCoO2Cathode//Makefile \
          batteryDevelop/LiCoO2Cathode/LiCoO2_Enth/Makefile \
          batteryDevelop/LiRefElectrode/Makefile \
          batteryDevelop/LiRefElectrode/LiMetal_LiIon_electrode_rxn/Makefile \
          batteryDevelop/LiRefElectrode/LiMetal_LiIon_electrode_rxn_abs/Makefile \
          batterySampleRuns/Mao_Paper/Makefile \
          changeHf/Makefile \
          ctpadds/Makefile \
          ctpadds/src/Makefile \
          ctpadds/tests/Makefile \
          ctpadds/tests/SolidKinTests/Makefile \
	  cttables/Makefile \
	  cttables/src/Makefile \
	  cttables/tests/Makefile \
          doc/doxygen/Makefile \
          Electrode/Makefile \
          Electrode/examples/Makefile \
          Electrode/examples/MCMBAnode_LiIon_CSTR_2_cV/Makefile \
          Electrode/examples/MCMBAnode_LiIon_SimpleDiff_2_cV/Makefile \
          Electrode/src/Makefile \
          Electrode/src_tests/Makefile \
          Electrode/tests/Makefile \
          Electrode/tests/runtest_Electrode \
          Electrode/tests/ImplicitIntegrator/Makefile \
          Electrode/tests/ImplicitIntegrator_2/Makefile \
          Electrode/tests/LiCoO2_LiIonCathode_CSTR_3_cc/Makefile \
          Electrode/tests/LiSi_5_Anode_Integrate/Makefile \
          Electrode/tests/FeS2_3_MPNewman_cV_restart/Makefile \
          Electrode/tests/FeS2_4_MPNewman_cc/Makefile \
          Electrode/tests/FeS2_4_cMPNewman_cc/Makefile \
          Electrode/tests/LiCoO2_LiIonCathode_SimpleDiff_cV/Makefile \
          Electrode/tests/LiCoO2_LiIonCathode_CSTR_thermal/Makefile \
          Electrode/tests/MCMB_Mao/Makefile \
          Electrode/tests/MCMBAnode_LiIon_DiffTALE_cV/Makefile \
          Electrode/tests/MCMBAnode_LiIon_DiffTALE_2_cV/Makefile \
          Electrode/tests/MCMBAnode_LiIon_DiffTALE_3_cV/Makefile \
          Electrode/tests/MCMBAnode_LiIon_DiffTALE_cV_FastRxnToEquil_NVC/Makefile \
          Electrode/tests/MCMBAnode_LiIon_SimpleDiff_cV/Makefile \
          Electrode/tests/MCMBAnode_LiIon_SimpleDiff_2_cV/Makefile \
          Electrode/tests/MCMBAnode_LiIon_SimpleDiff_3_cV/Makefile \
          Electrode/tests/MCMBAnode_LiIon_SimpleDiff_3_thermal/Makefile \
          Electrode/tests/MCMBAnode_LiIon_SimpleDiff_4_cV/Makefile \
          Electrode/tests/MCMBAnode_LiIon_SimpleDiff_cV_FastRxnToEquil_NVC/Makefile \
          Electrode/tests/MCMBAnode_LiIon_SimpleDiff_cc/Makefile \
          Electrode/tests/MCMBAnode_LiIon_CSTR_2_cV_restart/Makefile \
          Electrode/tests/UnitTests/Makefile \
          Electrode/tests_develop/Makefile \
          Electrode/tests_develop/CSTR_ReadCompareSoln/Makefile \
          Electrode/tests_develop/LiSi_1_Newman/Makefile \
          Electrode/tests_develop/LiCoO2_SimpleDiff_Dualfoil/Makefile \
          Electrode/tests_develop/LiMn2O4_OCP/Makefile \
          Electrode/tests_develop/MCMBAnode_LiIon_SimpleDiff_OCV/Makefile \
          Electrode/tests_develop/MCMBAnode_LiIon_SimpleDiff_Dualfoil/Makefile \
          Electrode/tests_develop/MCMBAnode_LiIon_SimpleDiff_Dualfoil_cc/Makefile \
          Electrode/tests_develop/LiCoO2_Complex_LiIonCathode_SimpleDiff_cV/Makefile \
          Electrode/tests_develop/MCMB_OCVOverride_ConstTemp/Makefile \
          Electrode/tests_develop/RadialDistrib_ReadCompareSoln/Makefile \
          Electrode/tests_develop/LiCoO2_SimpleDiff_Jac/Makefile \
          electrodeCell/Makefile \
          electrodeCell/src/Makefile \
          epequil/Makefile \
          epequil/src/Makefile \
          epequil/tests/Makefile \
          epequil/tests/gri_pairs/Makefile \
          epequil/tests/airNASA9_pairs/Makefile \
          epequil/tests/airNASA9_UVmatrix/Makefile \
          epequil/tests/airNASA9_matrix/Makefile \
          epequil/tests/gri_matrix/Makefile \
          epequil/tests/gri_matrix_savedEP/Makefile \
          epequil/tests/jp8_matrix/Makefile \
          epequil/tests/basopt_test/Makefile \
          epequil/tests/basopt_modgri/Makefile \
          epequil/tests/basopt_red1/Makefile \
          epequil/tests/silane_equil/Makefile \
          epequil/tests/ex_jp8/Makefile \
          epequil/tests/ex_gri/Makefile \
          epequil/tests/ionizedGasEquil/Makefile \
          epequil/tests/ionizedGasEquil/runtest \
	  Experiment/Makefile \
	  Experiment/src/Makefile \
          fitShomate/Makefile \
          fitShomate/src/Makefile \
          mpequil/Makefile \
          mpequil/src/Makefile \
          mpequil/tests/Makefile \
          mpequil/tests/CO2_solubility_test/Makefile \
          mpequil/tests/ex_gri/Makefile \
          mpequil/tests/multiPhase/Makefile \
          mpequil/failures/Makefile \
          mpequil/failures/LiFeS/Makefile \
          imt_model/Makefile \
	  imt_model/src/Makefile \
	  imt_model/tests/Makefile \
	  imt_model/tests/AtoB/Makefile \
          imt_model/tests/TBP_NoDiff/Makefile \
          imt_model/tests/TBP_Diff/Makefile \
          imt_model/tests/TBP_Water_HeteroCSTR/Makefile \
	  oneDSims/Makefile \
	  oneDSims/ndflame_test1/Makefile \
	  oneDSims/catcomb_stagflow_test1/Makefile \
          1Delectrode/Makefile \
          1Delectrode/src/Makefile \
          1Delectrode/src_CanteraElectrode/Makefile \
          1Delectrode/src_test/Makefile \
          1Delectrode/src_Cu2S/Makefile \
          1Delectrode/src_LiKCl_infPlateBat/Makefile \
          1Delectrode/src_LiKCl_infPorousBat/Makefile \
          1Delectrode/src_LiKCl_PorousBat/Makefile \
	  1Delectrode/src_LiIon_PorousBat/Makefile \
          1Delectrode/test_develop/Makefile \
          1Delectrode/test_develop/LiIon_MCMB_LiCoO2_DarcyFirst/Makefile \
          1Delectrode/test_develop/LiIon_MCMB_LiCoO2_Enthalpy/Makefile \
          1Delectrode/test_develop/LiIon_MCMB_LiCoO2_enthFirst/Makefile \
          1Delectrode/test_develop/LiIon_MCMB_LiCoO2_mechFirst/Makefile \
          1Delectrode/test_develop/LiIon_MCMB_LiCoO2_mechSecond/Makefile \
          1Delectrode/test_develop/LiIon_MCMB_LiCoO2_mechThird/Makefile \
          1Delectrode/test_develop/LiIon_MCMB_LiCoO2_noChange/Makefile \
          1Delectrode/test_develop/LiIon_MCMB_LiCoO2_noChange2/Makefile \
          1Delectrode/test_develop/LiIon_MCMB_LiCoO2_tempFirst/Makefile \
          1Delectrode/test_suite/Makefile \
          1Delectrode/test_suite/runtest \
          1Delectrode/test_suite/LiKCl_PorousBat_SPCD_MPNewman/Makefile \
          1Delectrode/test_suite/LiIon_MCMB_LiCoO2/Makefile \
          1Delectrode/test_suite/LiIon_MCMB_LiCoO2_2/Makefile \
          1Delectrode/test_suite/LiIon_MCMB_LiCoO2_collectors/Makefile \
          1Delectrode/test_suite/LiIon_MCMB_LiCoO2_Diff2/Makefile \
          1Delectrode/test_suite/LiIon_MCMB_LiCoO2_Diff2_heatSource/Makefile \
          1Delectrode/test_suite/LiIon_MCMB_LiCoO2_Diff3/Makefile \
          1Delectrode/test_suite/LiIon_MCMB_LiCoO2_DiffTALE2/Makefile \
          1Delectrode/test_suite/LiIon_MCMB_LiCoO2_Diff2_restart/Makefile \
          1Delectrode/test_suite/LiIon_MCMB_LiCoO2_EIS_timeStepStrat/Makefile \
          1Delectrode/test_suite/LiIon_MCMB_LiCoO2_Enthalpy/Makefile \
          1Delectrode/test_suite/LiIon_MCMB_LiCoO2_inerts/Makefile \
          1Delectrode/test_suite/DualfoilComparison/Makefile \
          1Delectrode/test_suite/DualfoilComparison/dualfoil_run/Makefile \
          1Delectrode/test_suite/CAEBAT_restart_cycle/Makefile \
          1Delectrode/test_suite/CAEBAT_restart_cycle_altTemp/Makefile \
          util_src/Makefile \
          util_src/src/Makefile \
          util_src/tests/Makefile \
          util_src/tests/basicMultiBlock/Makefile \
          util_src/tests/test_BE/Makefile \
          util_src/tests/test_timer/Makefile \
          )
#
chmod +x  epequil/tests/ionizedGasEquil/runtest
chmod +x  1Delectrode/test_suite/runtest
chmod +x  Electrode/tests/runtest_Electrode
#
# -----------------------------------------------------------------------------
#          END
# 
# -----------------------------------------------------------------------------
